Need to add hidden div with text so font will load for title screen

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <canvas id="space"></canvas>
-
+<div class="fonted" style="visibility: hidden;">Need to put some text in here to pre-load the font</div>
 <script type="text/javascript" src="game.js"></script>
 
 </body>
